--- a/ierlasmalvinasweb/admin/config.yml
+++ b/ierlasmalvinasweb/admin/config.yml
@@ -1,8 +1,8 @@
 backend:
   name: git-gateway
-  branch: main
+  branch: main   # usa "main" porque tu repo está en esa rama
 
-media_folder: "uploads"
+media_folder: "uploads"   # carpeta donde se guardan imágenes (no usarás Storage de pago)
 public_folder: "/uploads"
 
 collections:
@@ -12,14 +12,17 @@ collections:
     create: true
     slug: "{{slug}}"
     fields:
-      - { label: "Nombre", name: "nombre", widget: "string" }
+      - { name: "title", label: "Título", widget: "string" }
+      - { name: "description", label: "Descripción", widget: "text" }
+      - { name: "body", label: "Contenido", widget: "markdown" }
 
   - name: "publicaciones"
     label: "Publicaciones"
     folder: "content/publicaciones"
     create: true
-    slug: "{{slug}}"
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     fields:
-      - { label: "Título", name: "titulo", widget: "string" }
-      - { label: "Contenido", name: "contenido", widget: "markdown" }
-      - { label: "Sección", name: "seccionId", widget: "relation", collection: "secciones", search_fields: ["nombre"], value_field: "nombre", display_fields: ["nombre"] }
+      - { name: "title", label: "Título", widget: "string" }
+      - { name: "date", label: "Fecha", widget: "datetime" }
+      - { name: "body", label: "Contenido", widget: "markdown" }
+      - { name: "enlace", label: "Enlace (YouTube, Imgur, etc.)", widget: "string", required: false }
